--- a/src/main/webapp/assets/css/layout.css
+++ b/src/main/webapp/assets/css/layout.css
@@ -235,7 +235,7 @@ a {
 
 .viewui-user .user-name {
 	float: left;
-	width: 50px;
+/* 	width: 50px; */
 	font-size: 14px
 }
 
@@ -443,7 +443,7 @@ a {
 .comp-search-box {
 	clear: both;
 	width: 100%;
-	margin: 0px 0px 10px 0px;
+	margin: 0px 0px 5px 0px;
 	border: 1px solid #ddd;
 	overflow: auto
 }
